--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <!-- heading -->
-    <h1 class="text-4xl text-center font-bold py-4">Money Master</h1>
+    <h1 class="text-4xl text-center text-sky-500 font-bold py-4">
+      Money Master
+    </h1>
     <main class="">
       <div class="grid grid-cols-2 gap-4 h-full px-6">
         <!-- left side image -->
@@ -22,8 +24,102 @@
         </div>
 
         <!-- right side calculation -->
-        <div class="h-full flex items-center justify-center">
-          <p>Right side content</p>
+        <div class="h-full">
+          <div class="flex items-center justify-center bg-gray-100">
+            <div class="w-[50%] py-4">
+              <!-- Income -->
+              <h4 class="text-2xl font-bold text-center mb-4">Income</h4>
+
+              <div class="flex items-center gap-2">
+                <label class="text-sm mb-1 font-medium">Income:</label>
+                <input
+                  id="income-input"
+                  type="text"
+                  class="input input-bordered w-full p-2 bg-c-100"
+                  placeholder="10000"
+                />
+              </div>
+
+              <!-- Expenses -->
+              <h4 class="text-2xl font-bold text-center mb-4">Expenses</h4>
+
+              <div class="flex items-center gap-2">
+                <label class="text-sm mb-1 font-medium">Food:</label>
+                <input
+                  id="food-amount"
+                  type="text"
+                  class="input input-bordered w-full p-2"
+                  placeholder="10000"
+                />
+              </div>
+
+              <div class="flex items-center gap-2 my-2">
+                <label class="text-sm mb-1 font-medium">Rent:</label>
+                <input
+                  id="rent-input"
+                  type="text"
+                  class="input input-bordered w-full p-2"
+                  placeholder="2000"
+                />
+              </div>
+
+              <div class="flex items-center gap-2">
+                <label class="text-sm mb-1 font-medium">Clothes:</label>
+                <input
+                  id="cloth-amount"
+                  type="text"
+                  class="input input-bordered w-full p-2"
+                  placeholder="500"
+                />
+              </div>
+
+              <!-- Calculate Button -->
+              <div class="text-center my-2">
+                <button
+                  id="calculate-balance"
+                  class="px-6 py-2 bg-sky-500 text-white rounded-md hover:bg-sky-600 font-semibold"
+                >
+                  Calculate
+                </button>
+              </div>
+
+              <!-- Results -->
+              <h4 class="text-xl font-semibold mb-2">
+                Total Expenses: <span id="total-expenses">00</span>
+              </h4>
+
+              <h4 class="text-xl font-semibold mb-6">
+                Balance: <span id="total-balance">00</span>
+              </h4>
+
+              <!-- Savings Section -->
+              <div class="flex items-center gap-2 mb-3">
+                <label class="font-medium">Save:</label>
+                <input
+                  id="save-percent"
+                  type="text"
+                  class="input input-bordered w-16 h-9 text-center"
+                  placeholder="20"
+                />
+                <span>%</span>
+
+                <button
+                  id="save-amount"
+                  class="px-6 py-2 bg-sky-500 text-white rounded-md hover:bg-sky-600 font-semibold"
+                >
+                  Save
+                </button>
+              </div>
+
+              <h4 class="text-xl font-semibold mb-2">
+                Saving Amount: <span id="saving-amount">00</span>
+              </h4>
+
+              <h4 class="text-xl font-semibold">
+                Remaining Balance: <span id="remaining-balance">00</span>
+              </h4>
+            </div>
+          </div>
         </div>
       </div>
     </main>
