--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input
                   id="income-input"
                   type="text"
-                  class="input input-bordered w-full p-2 bg-c-100"
+                  class="input input-bordered w-full p-2 bg-neutral-200"
                   placeholder="10000"
                 />
               </div>
@@ -48,7 +48,7 @@
                 <input
                   id="food-amount"
                   type="text"
-                  class="input input-bordered w-full p-2"
+                  class="input input-bordered w-full p-2 bg-neutral-200"
                   placeholder="10000"
                 />
               </div>
@@ -58,7 +58,7 @@
                 <input
                   id="rent-input"
                   type="text"
-                  class="input input-bordered w-full p-2"
+                  class="input input-bordered w-full p-2 bg-neutral-200"
                   placeholder="2000"
                 />
               </div>
@@ -68,7 +68,7 @@
                 <input
                   id="cloth-amount"
                   type="text"
-                  class="input input-bordered w-full p-2"
+                  class="input input-bordered w-full p-2 bg-neutral-200"
                   placeholder="500"
                 />
               </div>
@@ -84,11 +84,11 @@
               </div>
 
               <!-- Results -->
-              <h4 class="text-xl font-semibold mb-2">
+              <h4 class="text-xl font-semibold mb-2 text-center">
                 Total Expenses: <span id="total-expenses">00</span>
               </h4>
 
-              <h4 class="text-xl font-semibold mb-6">
+              <h4 class="text-xl font-semibold mb-6 text-center">
                 Balance: <span id="total-balance">00</span>
               </h4>
 
@@ -98,7 +98,7 @@
                 <input
                   id="save-percent"
                   type="text"
-                  class="input input-bordered w-16 h-9 text-center"
+                  class="input input-bordered w-16 h-9 text-center bg-neutral-200"
                   placeholder="20"
                 />
                 <span>%</span>
@@ -111,11 +111,11 @@
                 </button>
               </div>
 
-              <h4 class="text-xl font-semibold mb-2">
+              <h4 class="text-xl font-semibold mb-2 text-center">
                 Saving Amount: <span id="saving-amount">00</span>
               </h4>
 
-              <h4 class="text-xl font-semibold">
+              <h4 class="text-xl font-semibold text-center">
                 Remaining Balance: <span id="remaining-balance">00</span>
               </h4>
             </div>
