--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <!-- heading -->
-    <h1 class="text-4xl text-center text-sky-500 font-bold py-4">
-      Money Master
-    </h1>
+    <div class="flex justify-center items-center gap-2">
+      <h1 class="text-4xl text-center text-sky-500 font-bold py-4">
+        Money Master
+      </h1>
+      <img src="./assets/dollar-symbol.png" alt="" class="w-7" />
+    </div>
     <main class="">
       <div class="grid grid-cols-2 gap-4 h-full px-6">
         <!-- left side image -->
