button color change

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <div class="text-center my-2">
                 <button
                   id="calculate-balance"
-                  class="px-6 py-2 bg-sky-500 text-white rounded-md hover:bg-sky-600 font-semibold"
+                  class="px-6 py-2 bg-blue-500 text-white rounded-md hover:bg-sky-600 font-semibold"
                 >
                   Calculate
                 </button>
@@ -108,7 +108,7 @@
 
                 <button
                   id="save-amount"
-                  class="px-6 py-2 bg-sky-500 text-white rounded-md hover:bg-sky-600 font-semibold"
+                  class="px-6 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 font-semibold"
                 >
                   Save
                 </button>
